--- a/models/linear regression/LinearRegression.ipynb
+++ b/models/linear regression/LinearRegression.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# torch.nn.Module allows us to build custom classes\n",
-    "class LR(nn.Module):\n",
+    "class LinearRegression(nn.Module):\n",
     "    def __init__(self, in_features, out_features, in_data, target_data):\n",
     "        # in_features - the number of inputs, out_features - the number of outputs of our network\n",
     "        super().__init__()\n",
@@ -98,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linear_model = LR(1, 1, X, y)"
+    "linear_model = LinearRegression(1, 1, X, y)"
    ]
   },
   {
