--- a/models/convolutional nns (CNNs)/MNIST cnn.ipynb
+++ b/models/convolutional nns (CNNs)/MNIST cnn.ipynb
@@ -598,7 +598,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#### So, accuracy is actually nice, cause difference between train and test datatsets accuracy is pretty small, i.e. model is not overfited. Now, let's try to predict class by image"
+        "#### So, accuracy is actually nice. On our train dataset an accuracy is mostly about 90% and on the test dataset is about 80%. Now, let's try to predict class by image"
       ]
     },
     {
@@ -666,7 +666,7 @@
       },
       "source": [
         "## After some tests, i can surely say that model performs excellent results.\n",
-        "### The most common case is 4/5 correct answers!"
+        "### The most common case is 5/5 correct answers!"
       ]
     },
     {
