--- a/models/convolutional nns (CNNs)/MNIST cnn.ipynb
+++ b/models/convolutional nns (CNNs)/MNIST cnn.ipynb
@@ -639,8 +639,8 @@
         {
           "output_type": "stream",
           "text": [
-            "Actual classes:   dog   car  ship horse   car\n",
-            "Predicted classes:   dog plane  ship horse   car\n"
+            "Actual classes:   dog  car  ship  horse  car\n",
+            "Predicted classes:   dog  car  ship  horse  car\n"
           ],
           "name": "stdout"
         },
